# radar-data-tools

./: .copier-answers.yml  .env.example  .gitignore  Makefile  Makefile.dump  Makefile.pg  README.md  Taskfile.yml  pyproject.toml  requirements.txt  shell.nix  tasks.example
.github/workflows/: publish.yml
docs/: README.md  book.toml  shell.nix
docs/src/: SUMMARY.md  query.md  setup.md
queries/: extract-points.sql  get-partition-id.sql  get-row-coordinates.sql  insert-points.sql  join-elevation.sql  materialize.sql
queries/dedump_export/: radar.sql  track.sql
queries/pg_export/: default.sql  track.sql
scripts/: compute-additional.py  compute-coords.sh  extract_dataset.sh  extract_ids.sh  extract_points.sh  grass_bulk.sh  insert-points.sh  join_points.sh  materialize.sh  pg_export.sh  query.sh
src/: extract_dataset.py  extract_points.py  get_elevation_point.py  gnuparallel.py  libs.py  main.py  settings.py
taskfiles/: DB.yml  Dump.yml  Manage.yml  PG.yml  Track.yml
variable_queries/: track_end_location.sql  track_hogl_avg.sql  track_length.sql  track_max_rcs.sql  track_mean_speed.sql  track_mid_location.sql  track_point_speed_angle.sql  track_start_location.sql  track_straight_length.sql  track_tortuosity.sql  track_variance_rcs.sql
